      - Removed: imperfect splitting of address to street and house number
      - Added: order is processed correctly when using legacy widget v5
      - Removed: unused fragments of code
      - Fixed: proper processing of database query return values during installation and uninstallation
      - Fixed: notice during order state update
      - Added: showing carrier extra content for (probably broken) third party templates
      - Fixed: proper generation and use of translations called outside the module's main class file
2.1.8 - Fixed: fix of bug in PrestaShop version lower than 1.7.6, when saving a change of pickup point
        in the administration, especially in the case of Z-BOXes (getting JSON correctly)
3.0.0 - Added: compatibility with PrestaShop 1.6
        Added: ability to open widget right after choosing delivery method without the need to click on button
      - Updated: packetery orders table is backed up and deleted upon uninstall
      - Added: One page checkout by Zelarg support (tested OPC v2.3.12 with PS v1.6.1.7)
      - Updated: improved compatibility with PHP versions 7.2,7.4
      - Updated: refactored saving pickup point information in cart
      - Updated: hook for new orders changed from actionOrderHistoryAddAfter to actionValidateOrder
      - Fixed: treated a rare situation where the payment module cannot be instantiated
      - Fixed: functionality of KnowBand SuperCheckout when no shipping method is preselected
      - Updated: treated the situation when the country of the pickup point does not correspond to the customer's address
      - Updated: order administration realised using PrestaShop's native grid
      - Added: Product weight in grams, pounds and ounces is now supported. If the weight of the products is not
        in kilograms, the module converts the weight of the shipment to kilograms before exporting it.
      - Updated: module settings page realised using standard PrestaShop's Helper