@@ -88,6 +88,10 @@ $_MODULE['<{packetery}prestashop>configure_f4f70727dc34561dfde1a3c529b6205c'] = 
 $_MODULE['<{packetery}prestashop>configure_485115c849e2941a8608587cab909927'] = 'Výdejní místa';
 $_MODULE['<{packetery}prestashop>tab_settings_2f5fdf39f1e94a9a62df58227b00845b'] = 'Seznam dopravců';
 $_MODULE['<{packetery}prestashop>tab_settings_5ece607071fe59ddc4c88dc6abfe2310'] = 'Nenalezeny žádné položky';
+$_MODULE['<{packetery}prestashop>list_header_0b793858e33c336a5b1e2103ced04774'] = 'Vyberte offset';
+$_MODULE['<{packetery}prestashop>list_header_5182dfef2124178acde4250919ba2c4f'] = 'Přeskočit %s polí';
+$_MODULE['<{packetery}prestashop>list_header_ea4788705e6873b424c65e91c2846b19'] = 'Zrušit';
+$_MODULE['<{packetery}prestashop>list_header_02d236d48c37176a685a708b17a6d1b7'] = 'Připravit štítky';
 $_MODULE['<{packetery}prestashop>widget_422f03dbebc5e4e66d1d5b7e4564c355'] = 'Vybrat místo vyzvednutí:';
 $_MODULE['<{packetery}prestashop>widget_81bd9c17af94c31967cdb6870f154d83'] = 'Vybrané místo vyzvednutí:';
 $_MODULE['<{packetery}prestashop>widget_397164405b87202533b09fd47a137141'] = 'Vyberte prosím před potvrzením objednávky výdejní místo';
