@@ -79,3 +79,4 @@
       - Added: Product weight in grams, pounds and ounces is now supported. If the weight of the products is not
         in kilograms, the module converts the weight of the shipment to kilograms before exporting it.
       - Updated: module settings page realised using standard PrestaShop's Helper
+      - Added: possibility to set print offset when preparing packet labels
